[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "restkit-server"
version = "0.1.2"
description = "A Flask-based REST server toolkit for rapid API development"
readme = "README.md"
authors = [
    { name = "Politech-tech", email = "ido.shafrir@gmail.com" },
]
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "flask",
    "flask-cors",
    "requests",
]

[project.urls]
Homepage = "https://github.com/Politech-tech/restkit-server"
Repository = "https://github.com/Politech-tech/restkit-server.git"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
